minor tweaks